# e-com

./: main.py  pyproject.toml
app/config/: config.py
app/models/: __init__.py  base_model.py  categories.py  category.py  product.py  product_category.py  products.py  user.py  users.py
app/routers/: __init__.py  auth.py  categories.py  products.py  users.py
app/schemas/: __init__.py  categories.py  products.py  users.py
app/utils/: security.py
